force-app/main/default/objects/KCPQ_Account_Pricing_Library__c/KCPQ_Account_Pricing_Library__c.object-meta.xml
<CustomObject>
    <label>Account Pricing Library</label>
    <nameField>
        <label>Account Pricing Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Pricing Libraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>