force-app/main/default/objects/KCPQ_Account_Pricing_Library__c/fields/KCPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Pricing Libraries</relationshipLabel>
    <relationshipName>Account_Pricing_Libraries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>