force-app/main/default/objects/KCPQ_Account_Pricing_Library__c/fields/KCPQ_Pricing_Library__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Library__c</fullName>
    <label>Pricing Library</label>
    <referenceTo>KCPQ_Pricing_Library__c</referenceTo>
    <relationshipLabel>Account Pricing Libraries</relationshipLabel>
    <relationshipName>Account_Pricing_Libraries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>