force-app/main/default/objects/KCPQ_Account_Pricing_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KCPQ_Pricing_Library__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>KCPQ_Sequence__c</columns>
    <columns>KCPQ_Status__c</columns>
    <columns>KCPQ_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>